testdata/baselines/reference/submodule/conformance/varRequireFromJavascript.errors.txt
use.js(1,10): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
use.js(12,12): error TS7006: Parameter 'wrap' implicitly has an 'any' type.


==== use.js (2 errors) ====
    var ex = require('./ex')
             ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
    // values work
    var crunch = new ex.Crunch(1);
    crunch.n
    
    
    // types work
    /**
     * @param {ex.Crunch} wrap
     */
    function f(wrap) {
               ~~~~
!!! error TS7006: Parameter 'wrap' implicitly has an 'any' type.
        wrap.n
    }
    
==== ex.js (0 errors) ====
    export class Crunch {
        /** @param {number} n */
        constructor(n) {
            this.n = n
        }
        m() {
            return this.n
        }
    }
    